--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@rule-of-thumb/navbar": "file:src/packages/NavBar",
+    "@rule-of-thumb/poll-card": "file:src/packages/PollCard",
+    "@rule-of-thumb/poll-list-item": "file:src/packages/PollListItem",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
