--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@rule-of-thumb/navbar": "file:src/packages/NavBar",
     "@rule-of-thumb/poll-card": "file:src/packages/PollCard",
-    "@rule-of-thumb/poll-list-item": "file:src/packages/PollListItem",
+    "@rule-of-thumb/polls-list": "file:src/packages/PollsList",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
