--- a/src/packages/PollsList/package.json
+++ b/src/packages/PollsList/package.json
@@ -1,4 +1,7 @@
 {
   "name": "@rule-of-thumb/polls-list",
-  "main": "index.tsx"
+  "main": "index.tsx",
+  "dependencies": {
+    "classnames": "^2.3.2"
+  }
 }
