refactor: update main layout to use toggle (#17)
* refactor: remove pollslist and keep polllistitem

* refactor: update main layout to hold toggle

---------

Co-authored-by: Kae Uchoa <kaeuchoas@gmail.com>

--- a/src/packages/PollListItem/package.json
+++ b/src/packages/PollListItem/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "@rule-of-thumb/polls-list",
+  "name": "@rule-of-thumb/poll-list-item",
   "main": "index.tsx",
+  "version": "1.0.0",
   "dependencies": {
     "classnames": "^2.3.2"
   }
