--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-query": "^3.39.3",
     "react-responsive": "^9.0.2",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
